linked to Hangman game

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         <hr>
         <br>
             <div class="clearfix">
-                <a href="#">
+                <a href="https://celving.github.io/Word-Guess-Game/">
                     <div class="galleryImagesTopLeft">
                     
                         <img class="portImages" src="assets/images/placeholder1.jpg">
