added trivia game

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
                     </div>
                 </a>
             <br>
-                <a href="#">
+                <a href="https://celving.github.io/TriviaGame/">
                     <div class= "galleryImagesMiddleLeft">
                     
                         <img class="portImages" src="assets/images/placeholder3.jpg">
