added giphy project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,12 @@
                         <div class="galleryLinkText">Trivia Game</div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="https://celving.github.io/giphy-project/">
                     <div class="galleryImagesBottomRight">
                     
                         <img class="portImages" src="assets/images/placeholder4.jpg">
                     
-                        <div class="galleryLinkText">Rutgers Info Widget</div>
+                        <div class="galleryLinkText">Gif Generator</div>
                     </div>
                 </a>
             <br>
