added train scheduler to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,12 +55,12 @@
                     </div>
                 </a>
             <br>
-            <a href="#">
+            <a href="https://celving.github.io/Train-time">
                 <div class="galleryImagesBottomLeft">
                     
                         <img class="portImages" src="assets/images/placeholder5.jpg">
                     
-                    <div class="galleryLinkText">Rock Paper Scissors</div>
+                    <div class="galleryLinkText">Train Scheduler</div>
                 </div>
             </a>
             </div>
