fixed node packages in readme

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,12 +67,12 @@
                 </div>
             </a>
 
-            <a href="https://celving.github.io/Word-Guess-Game/">
+            <a href="https://https://github.com/celving/liri-node-app">
                 <div class="galleryImagesSix">
 
                     <img class="portImages" src="assets/images/placeholder1.jpg">
 
-                    <div class="galleryLinkText">Hangman</div>
+                    <div class="galleryLinkText">LIRI Node App</div>
                 </div>
             </a>
         </div>
