added bamazon to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,12 @@
                 </div>
             </a>
 
-            <a href="https://celving.github.io/unit-4-game/">
+            <a href="https://github.com/celving/bamazon">
                 <div class="galleryImagesTwo">
 
                     <img class="portImages" src="assets/images/placeholder2.jpg">
 
-                    <div class="galleryLinkText">Crystal Collector</div>
+                    <div class="galleryLinkText">Bamazon Storefront</div>
                 </div>
             </a>
             <br>
