added friend finder

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,12 @@
                 </div>
             </a>
             <br>
-            <a href="https://celving.github.io/TriviaGame/">
+            <a href="https://secret-beyond-11151.herokuapp.com">
                 <div class="galleryImagesThree">
 
                     <img class="portImages" src="assets/images/placeholder3.jpg">
 
-                    <div class="galleryLinkText">Trivia Game</div>
+                    <div class="galleryLinkText">Friend Finder</div>
                 </div>
             </a>
             <a href="https://celving.github.io/giphy-project/">
