added burger time

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,12 +58,12 @@
                 </div>
             </a>
             <br>
-            <a href="https://celving.github.io/Train-time">
+            <a href="https://still-ocean-46669.herokuapp.com">
                 <div class="galleryImagesFive">
 
                     <img class="portImages" src="assets/images/placeholder5.jpg">
 
-                    <div class="galleryLinkText">Train Scheduler</div>
+                    <div class="galleryLinkText">Burger Time</div>
                 </div>
             </a>
 
